--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -8,13 +8,24 @@
       "devices": "Устройства",
       "about": "О приложении"
     },
+    "audio_cue": {
+      "Off": "Выкл",
+      "Less": "Мин",
+      "Med": "Сред",
+      "More": "Часто",
+      "My Telemetry": "Телеметрия",
+      "Next Waypoint": "След точка",
+      "Group Awareness": "Оповещение группы",
+      "Report Fuel": "Укажите уровень топлива",
+      "Fuel Level": "Уровень топлива"
+    },
     "about_description": "Этот проект был основан Кейлебом Джонсоном (Caleb Johnson) чтобы собрать в одном приложении все инструменты для координации групповых кросс-кантри перелетов на парамоторах.\n\nЭто приложение бесплатно и навсегда останется opensource. Мы рассчитываем на вашу поддержку чтобы оно осталось таким.\n\nПерейдите по ссылкам ниже, чтобы поучаствовать в разработке.",
     "Code": "Код",
     "Chat": "Чат",
     "Settings": "Настройки",
     "settings": {
       "group": {
-        "General": "Общие",
+        "General": "Общее",
         "UI": "Интерфейс",
         "Display Units": "Единицы измерения",
         "Misc": "Прочее",
@@ -27,8 +38,8 @@
         "primary_altimeter": "Основной альтиметр",
         "altimeter_vsi_thresh": "Порог стрелки альтиметра (м/с)",
         "right_hand_ui": "Интерфейс для правшей",
-        "always_show_pilot_names": "Всегда показывать имена пилотов",
-        "group_view_includes_waypoints": "Групповой вид включает путевые точки",
+        "always_show_pilot_names": "Показывать имена пилотов",
+        "group_view_includes_waypoints": "Путевые точки на экране группы",
         "Distance": "Расстояние",
         "Speed": "Скорость",
         "Vario": "Варио",
@@ -41,7 +52,7 @@
         "spoof_location": "Подменить местоположение",
         "clear_map_cache": "Очистить кэш карты",
         "clear_avatar_cache": "Очистить кэш аватаров",
-        "erase_identity": "Стереть личные данные"
+        "erase_identity": "Удалить личные данные"
       }
     },
     "Distance": "Расстояние",
@@ -51,17 +62,17 @@
     "External Link": "Внешняя ссылка",
     "start": "начало",
     "end": "конец",
-    "off": "выключено",
-    "small": "малый",
-    "medium": "средний",
+    "off": "выкл",
+    "small": "мал",
+    "medium": "сред",
     "large": "большой",
-    "xlarge": "очень большой",
+    "xlarge": "оч большой",
     "Group Members": "Участники группы",
     "Join Code": "Код присоединения",
     "Current Group": "Текущая группа",
     "Recent Groups": "Недавние группы",
     "dialog_past_group_empty": "Пусто...\nВы недавно были в группе?",
-    "Checklist": "Контрольный список",
+    "Checklist": "Чек-лист",
     "empty_list": "Опа, здесь пусто!",
     "log_summary": {
       "Distance": "Расстояние",
@@ -80,7 +91,7 @@
     "G-Force": "Перегрузка",
     "Laurch": "Взлёт",
     "Landing": "Посадка",
-    "dialog_select_range_with_slider": "Используйте ползунок, чтобы выбрать диапазон журнала для сохранения.",
+    "dialog_select_range_with_slider": "Используйте ползунок, чтобы выбрать диапазон журнала для сохранения",
     "Invalid Selection": "Неверный выбор",
     "flight_duration_hist": "Длительность полётов (гистограмма)",
     "Monthly Totals": "Итого по месяцам",
@@ -111,8 +122,8 @@
         "delete_plan": "Удалить этот план?"
       },
       "warn": {
-        "clear_all_waypoints_in_group": "Это удалит все путевые точки для всех участников группы!",
-        "replace_plan": "Это заменит план для всех участников группы."
+        "clear_all_waypoints_in_group": "Это удалит все путевые точки для всех в группе!",
+        "replace_plan": "Это заменит план для всех в группе."
       }
     },
     "btn": {
