--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -19,6 +19,7 @@
         "Report Fuel": "Report Fuel",
         "Fuel Level": "Fuel Level"
     },
+    "Requires Restarting xcNav": "Requires Restarting xcNav",
     "about_description": "This project was started by Caleb Johnson with the goal of putting all the tools for coordinating a group, cross-country flight into one app. \n\nThis app is free and open source forever. We rely on your contributions to keep it alive.\n\nCheckout the resources below to get involved.",
     "Code": "Code",
     "Chat": "Chat",
@@ -33,6 +34,7 @@
             "Experimental": "Experimental"
         },
         "title": {
+            "Language Override": "Language Override",
             "ground_support_mode": "Ground Support Mode",
             "auto_record_flight": "Auto Record Flight",
             "primary_altimeter": "Primary Altimeter",
