--- a/assets/translations/hu.json
+++ b/assets/translations/hu.json
@@ -1,4 +1,81 @@
 {
+    "main_menu": {
+        "group": "Csoport",
+        "checklist": "Ellenőrzőlista",
+        "weather": "Időjárás",
+        "log": "Napló",
+        "settings": "Beállítások",
+        "devices": "Eszközök",
+        "about": "Névjegy"
+    },
+    "audio_cue": {
+        "Off": "Ki",
+        "Less": "Kevesebb",
+        "Med": "Közepes",
+        "More": "Több",
+        "My Telemetry": "Saját telemetria",
+        "Next Waypoint": "Következő útvonalpont",
+        "Group Awareness": "Csoporttudatosság",
+        "Report Fuel": "Üzemanyagszint jelentése",
+        "Fuel Level": "Üzemanyagszint"
+    },
+    "Requires Restarting xcNav": "Az xcNav újraindítása szükséges",
+    "about_description": "Ezt a projektet Caleb Johnson indította azzal a céllal, hogy az összes, csoportos távrepülés koordinálásához szükséges eszközt egyetlen alkalmazásba gyűjtse.\n\nEz az alkalmazás örökre ingyenes és nyílt forráskódú. A fenntartásához a te hozzájárulásodra is szükség van.\n\nAz alábbi források segítségével te is bekapcsolódhatsz.",
+    "Code": "Kód",
+    "Chat": "Csevegés",
+    "Settings": "Beállítások",
+    "settings": {
+        "group": {
+            "General": "Általános",
+            "UI": "Felhasználói felület",
+            "Display Units": "Megjelenítési egységek",
+            "Misc": "Egyéb",
+            "Debug Tools": "Hibakereső eszközök",
+            "Experimental": "Kísérleti"
+        },
+        "title": {
+            "Language Override": "Nyelv felülírása",
+            "ground_support_mode": "Földi támogatási mód",
+            "auto_record_flight": "Repülés automatikus rögzítése",
+            "primary_altimeter": "Elsődleges magasságmérő",
+            "altimeter_vsi_thresh": "Magasságmérő nyíl küszöbértéke (m/s)",
+            "right_hand_ui": "Jobbkezes felhasználói felület",
+            "always_show_pilot_names": "Pilótanevek mindig látszanak",
+            "group_view_includes_waypoints": "A csoportnézet tartalmazza az útvonalpontokat",
+            "Distance": "Távolság",
+            "Speed": "Sebesség",
+            "Vario": "Vario",
+            "Fuel": "Üzemanyag",
+            "adsb_proximity_profile": "ADSB közelségprofil",
+            "filter_tail_numbers": "Lajstromszám(ok) szűrése",
+            "test_audio_cues": "Hangjelzések tesztelése",
+            "opt_out_usage_stats": "Névtelen használati statisztikák elutasítása",
+            "show_servocarb": "ServoCarb menü megjelenítése",
+            "spoof_location": "Helyzet hamisítása",
+            "clear_map_cache": "Térképmemória törlése",
+            "clear_avatar_cache": "Avatar cache törlése",
+            "erase_identity": "Azonosító törlése"
+        }
+    },
+    "Distance": "Távolság",
+    "Speed": "Sebesség",
+    "Vario": "Vario",
+    "Fuel": "Üzemanyag",
+    "External Link": "Külső hivatkozás",
+    "start": "indítás",
+    "end": "befejezés",
+    "off": "ki",
+    "small": "kicsi",
+    "medium": "közepes",
+    "large": "nagy",
+    "xlarge": "extra nagy",
+    "Group Members": "Csoporttagok",
+    "Join Code": "Csatlakozási kód",
+    "Current Group": "Aktuális csoport",
+    "Recent Groups": "Legutóbbi csoportok",
+    "dialog_past_group_empty": "Nincs itt semmi...\nVoltál már csoportban korábban?",
+    "Checklist": "Ellenőrzőlista",
+    "empty_list": "Hűha, de üres!",
     "log_summary": {
         "Distance": "Távolság",
         "Fuel Burn Rate": "Üzemanyag-fogyási arány",
