--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -19,6 +19,8 @@
     "Report Fuel": "Укажите уровень топлива",
     "Fuel Level": "Уровень топлива"
   },
+  "Auto Connect": "Auto Connect",
+  "Bluetooth Devices": "Bluetooth Devices",
   "Requires Restarting xcNav": "Требуется перезапуск xcNav",
   "about_description": "Этот проект был основан Кейлебом Джонсоном (Caleb Johnson) чтобы собрать в одном приложении все инструменты для координации групповых кросс-кантри перелетов на парамоторах.\n\nЭто приложение бесплатно и навсегда останется opensource. Мы рассчитываем на вашу поддержку чтобы оно осталось таким.\n\nПерейдите по ссылкам ниже, чтобы поучаствовать в разработке.",
   "Code": "Код",
