--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -161,7 +161,9 @@
     "Leave": "Выйти",
     "Ok": "Ок",
     "Load_All": "Загрузить всё",
-    "Load_Selected": "Загрузить выбранное"
+    "Load_Selected": "Загрузить выбранное",
+    "import": "Импорт",
+    "export_all": "Экспортировать все"
   },
   "Library": "Библиотека",
   "Search": "Поиск",
