Save/restore hide wind observations setting

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -43,6 +43,7 @@
             "altimeter_vsi_thresh": "Altimeter Arrow Threshold (m/s)",
             "right_hand_ui": "Right-handed UI",
             "always_show_pilot_names": "Always Show Pilot Names",
+            "hide_wind_observations": "Hide Wind Observations",
             "group_view_includes_waypoints": "Group View Includes Waypoints",
             "Distance": "Distance",
             "Speed": "Speed",
