--- a/assets/translations/hu.json
+++ b/assets/translations/hu.json
@@ -43,6 +43,7 @@
             "altimeter_vsi_thresh": "Magasságmérő nyíl küszöbértéke (m/s)",
             "right_hand_ui": "Jobbkezes felhasználói felület",
             "always_show_pilot_names": "Pilótanevek mindig látszanak",
+            "hide_wind_observations": "Szélmegfigyelések elrejtése",
             "group_view_includes_waypoints": "A csoportnézet tartalmazza az útvonalpontokat",
             "Distance": "Távolság",
             "Speed": "Sebesség",
