--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -43,6 +43,7 @@
       "altimeter_vsi_thresh": "Порог стрелки альтиметра (м/с)",
       "right_hand_ui": "Интерфейс для правшей",
       "always_show_pilot_names": "Показывать имена пилотов",
+      "hide_wind_observations": "Скрыть наблюдения за ветром",
       "group_view_includes_waypoints": "Путевые точки на экране группы",
       "Distance": "Расстояние",
       "Speed": "Скорость",
