--- a/assets/translations/hu.json
+++ b/assets/translations/hu.json
@@ -44,6 +44,7 @@
             "right_hand_ui": "Jobbkezes felhasználói felület",
             "always_show_pilot_names": "Pilótanevek mindig látszanak",
             "hide_wind_observations": "Szélmegfigyelések elrejtése",
+            "use_gps_altitude": "Csak GPS használata magasságméréshez",
             "group_view_includes_waypoints": "A csoportnézet tartalmazza az útvonalpontokat",
             "Distance": "Távolság",
             "Speed": "Sebesség",
